--- a/saudacao-service/src/main/resources/application.yml
+++ b/saudacao-service/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
   profiles:
     active:
       - pt
+  config:
+    import:
+    - optional:configserver:http://localhost:8888
  
 saudacao-service:
   saudacao: Hello
