Aula 7 e currency service

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -12,3 +12,12 @@ spring:
           default-label: main
           search-paths:
           - 'configs/{application}'
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"
+  endpoint:
+    health:
+      show-details: always
