--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=config-service
 server.port=8888
 
-spring.profiles.active=native
+#Esse e usado para chamar de uma pasta aleatoria
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=classpath:/config/{application}
 
-spring.cloud.config.server.native.search-locations=classpath:/config/{application}
+spring.cloud.config.server.git.uri=https://github.com/Gabriel-Henrique-Gemelli/Microservices_java.git
+spring.cloud.config.server.git.search-paths=/Config/Greeting-service/{application}
