--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -5,5 +5,8 @@ server.port=8888
 #spring.profiles.active=native
 #spring.cloud.config.server.native.search-locations=classpath:/config/{application}
 
+
+
 spring.cloud.config.server.git.uri=https://github.com/Gabriel-Henrique-Gemelli/Microservices_java.git
-spring.cloud.config.server.git.search-paths=/Config/Greeting-service/{application}
+spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.search-paths=/Config/Greeting-service
