--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,12 +1,9 @@
+spring.application.name=currency-service
 server.port=8100
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_currency
+spring.datasource.url=jdbc:postgresql://localhost/db_currency
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.flyway.locations=classpath:db/migration
-spring.flyway.fail-on-unsupported-database=false
