--- a/greeting-service/src/main/resources/application.properties
+++ b/greeting-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=greeting-service
+server.port=8080
+
+
+spring.config.import=optional:configserver:http://localhost:8888
+
+
+spring.profiles.active=pt
+
+greeting-service.greeting=Hello
+greeting-service.default-name=World
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.env.show-values=always
