--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.application.name=gateway_service
+spring.application.name=gateway-service
 
 server.port=8765
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
@@ -8,3 +9,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
