--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       context: ./discovery-service
     ports:
       - "8761:8761"
+    environment:
+     EUREKA_INSTANCE_HOSTNAME: config-service
     
   # -------------------------------
   config-service:
@@ -22,7 +24,8 @@ services:
     depends_on:
       - discovery-service
     environment:
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      EUREKA_INSTANCE_HOSTNAME: config-service
   
   # -------------------------------
   greeting-service:
@@ -33,8 +36,9 @@ services:
       - discovery-service
       - config-service
     environment:
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
       SPRING_CONFIG_IMPORT: optional:configserver:http://config-service:8888
+      EUREKA_INSTANCE_HOSTNAME: greeting-service
 
   # -------------------------------
   db-currency:
@@ -57,7 +61,9 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db-currency:5432/db_currency
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 1234
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      EUREKA_INSTANCE_PREFER_IP_ADDRESS: "false"
+      EUREKA_INSTANCE_HOSTNAME: currency-service
     
   # -------------------------------
   db-product:
@@ -81,7 +87,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db-product:5432/db_product
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 1234
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      EUREKA_INSTANCE_HOSTNAME: product-service
   # -------------------------------
   db-user:
     image: postgres:16
@@ -104,7 +111,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db-user:5432/db_user
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 1234
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      EUREKA_INSTANCE_HOSTNAME: auth-service
     
   # -------------------------------
   db-order:
@@ -127,7 +135,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db-order:5432/db_order
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 1234
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      EUREKA_INSTANCE_HOSTNAME: order-service
     
   # -------------------------------
   gateway-service:
@@ -139,6 +148,7 @@ services:
     depends_on:
       - discovery-service
     environment:
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      EUREKA_INSTANCE_HOSTNAME: gateway-service
     
 # -------------------------------
