--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=gateway-service
-
 server.port=8765
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# apunte para o Eureka dentro do Docker (não 'localhost' quando estiver no compose)
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-service:8761/eureka/}
 eureka.instance.prefer-ip-address=true
 
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# NOVAS chaves do Gateway
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
