--- a/Cart-service/src/main/resources/application.properties
+++ b/Cart-service/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.locations=classpath:db_migration
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.healthcheck.enabled=true
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
-eureka.client.healthcheck.enabled=true
 
 info.app.name="This is a sample eureka cliente application"
 
@@ -23,3 +23,5 @@ management.endpoint.info.access=unrestricted
 
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
+
+spring.config.import=optional:configserver:
