--- a/auth-service/auth-service/src/main/resources/application.properties
+++ b/auth-service/auth-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8900
 #Database connection
 spring.datasource.url=jdbc:postgresql://localhost/db_user
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -24,3 +24,5 @@ eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 #Para usar o actuator ao inves de heartbeat
 eureka.client.healthcheck.enabled=true 
+spring.cloud.config.enabled=false
+spring.config.import=optional:configserver:
