Carrinho e criacao de usuario funcionando

--- a/auth-service/auth-service/src/main/resources/application.properties
+++ b/auth-service/auth-service/src/main/resources/application.properties
@@ -25,4 +25,4 @@ eureka.instance.prefer-ip-address=true
 #Para usar o actuator ao inves de heartbeat
 eureka.client.healthcheck.enabled=true 
 spring.cloud.config.enabled=false
-spring.config.import=optional:configserver:
+spring.config.import=optional:configserver:http://config-service:8888
