--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -5,7 +5,8 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 # apunte para o Eureka dentro do Docker (não 'localhost' quando estiver no compose)
-eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-service:8761/eureka/}
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+
 eureka.instance.prefer-ip-address=true
 
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
