--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.config.import=optional:configserver:http://config-service:8888
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=gabrielhenriquegemelli@gmail.com
-spring.mail.password=iedc urpd malw nxjy
+spring.mail.password=xvta jptg rxaj gpwo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
