--- a/Cart-service/src/main/resources/application.properties
+++ b/Cart-service/src/main/resources/application.properties
@@ -23,3 +23,6 @@ management.endpoint.info.access=unrestricted
 
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
