--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ volumes:
   db-order-data:
   db-cart-data:
 
+
 services:
 
   # -------------------------------
@@ -175,3 +176,24 @@ services:
       SPRING_DATASOURCE_PASSWORD: 1234
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
       EUREKA_INSTANCE_HOSTNAME: cart-service
+  email-service:
+    image: email-service:latest
+    build:
+      context: ./email-service
+    depends_on:
+      - discovery-service
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      SPRING_CONFIG_IMPORT: optional:configserver:http://config-service:8888
+      EUREKA_INSTANCE_HOSTNAME: email-service
+
+  maps-service:
+    image: maps-service:latest
+    build:
+      context: ./maps-service
+    depends_on:
+      - discovery-service
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-service:8761/eureka/
+      SPRING_CONFIG_IMPORT: optional:configserver:http://config-service:8888
+      EUREKA_INSTANCE_HOSTNAME: maps-service
