--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -154,4 +154,17 @@
       </plugin>
     </plugins>
   </build>
+	<url/>
+	<licenses>
+		<license/>
+	</licenses>
+	<developers>
+		<developer/>
+	</developers>
+	<scm>
+		<connection/>
+		<developerConnection/>
+		<tag/>
+		<url/>
+	</scm>
 </project>
